# robotframework-filewatcher

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: code-checks.yml  generate-docs.yml
docs/: FileWatcher.html  index.html
src/FileWatcher/: __init__.py  exceptions.py  library.py  models.py  watcher.py
src/FileWatcher/keywords/: waiting.py  watching.py
tests/: acceptance.robot  test_event_store.py  test_file_keywords.py  test_keywords.py  test_library.py  test_models.py  test_watch_manager.py
